2014-05-06  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xarray.h: fixed a typo which could cause segfault.

2014-03-24  Alexander V. Lukyanov <lavv17f@gmail.com>

	* HttpDir.cc: try to parse as plain html when props format is unrecognized.

2014-03-18  Sami Farin <sami.farin@gmail.com>

	* FileSet.cc, FtpDirList.cc, Http.cc, PollVec.cc, complete.cc, lftp.cc:
	  fix warnings

2014-03-18  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FindJob.cc: don't add slash for plain files in URLs.

2014-03-18  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.h, mkdirJob.h, FindJob.h: don't access the
	  FileAccessRefC ref in dtor, as the original FileAccessRef can be
	  already deleted.

2014-03-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* resource.cc: add hftp:decode setting.
	* xarray.cc, xarray.h: use xrealloc instead of realloc; truncate
	  xarray_m in dtor, so that proper dispose method is called.
	* xmap.cc: use xfree for xmalloc'ed memory.

2014-01-24  Alexander V. Lukyanov <lavv17f@gmail.com>

	* pgetJob.cc: (pget:min-chunk-size) new setting with 1M by default.

2013-01-23  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.cc, commands.cc, history.cc: don't add a slash if it's
	  already there.

2013-01-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: allow UTC along with GMT in http timestamps.
	* Http.cc: fixed Content-Length handling after PROPFIND.

2013-01-16  Alexander V. Lukyanov <lavv17f@gmail.com>

	* DHT.cc: prefer responded nodes in search over not responded ones.
	* Torrent.cc, Torrent.h: add shutting_down_timer to fix a hang on
	  unresponsive trackers.
	* TorrentTracker.h: use 30 if interval<30.

2013-01-15  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: fixed rmdir for WebDAV by adding trailing slash to the path.

2014-01-10  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Torrent.cc, Torrent.h: use SMTaskRef for FDCache.

2013-12-09  Alexander V. Lukyanov <lavv17f@gmail.com>
