@@ -43,13 +43,16 @@ int SSH_Access::HandleSSHMessage()
    if(!eol)
    {
       const char *p="password:";
+      const char *p_for="password for ";
       const char *y="(yes/no)?";
       int p_len=strlen(p);
+      int p_for_len=strlen(p_for);
       int y_len=strlen(y);
       if(s>0 && b[s-1]==' ')
 	 s--;
       if((s>=p_len && !strncasecmp(b+s-p_len,p,p_len))
-      || (s>10 && !strncmp(b+s-2,"':",2)))
+      || (s>10 && !strncmp(b+s-2,"':",2))
+      || (s>p_for_len && b[s-1]==':' && !strncasecmp(b,p_for,p_for_len)))
       {
 	 if(!pass)
 	 {
